component relationship management (add & delete) implementation
