# restapi/operations/component/delete_component_relationship_responses.go
@@ -1,0 +1,189 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (c) 2016, 2017, 2018 Alexandre Biancalana <ale@biancalanas.net>.
+// All rights reserved.
+//
+// Redistribution and use in source and binary forms, with or without
+// modification, are permitted provided that the following conditions are met:
+//     * Redistributions of source code must retain the above copyright
+//       notice, this list of conditions and the following disclaimer.
+//     * Redistributions in binary form must reproduce the above copyright
+//       notice, this list of conditions and the following disclaimer in the
+//       documentation and/or other materials provided with the distribution.
+//     * Neither the name of the <organization> nor the
+//       names of its contributors may be used to endorse or promote products
+//       derived from this software without specific prior written permission.
+//
+// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+// ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+// WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+// DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
+// DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+// (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+// LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+// ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+// SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+//
+
+package component
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"configManager/models"
+)
+
+// DeleteComponentRelationshipOKCode is the HTTP code returned for type DeleteComponentRelationshipOK
+const DeleteComponentRelationshipOKCode int = 200
+
+/*DeleteComponentRelationshipOK successful operation
+
+swagger:response deleteComponentRelationshipOK
+*/
+type DeleteComponentRelationshipOK struct {
+}
+
+// NewDeleteComponentRelationshipOK creates DeleteComponentRelationshipOK with default headers values
+func NewDeleteComponentRelationshipOK() *DeleteComponentRelationshipOK {
+	return &DeleteComponentRelationshipOK{}
+}
+
+// WriteResponse to the client
+func (o *DeleteComponentRelationshipOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// DeleteComponentRelationshipBadRequestCode is the HTTP code returned for type DeleteComponentRelationshipBadRequest
+const DeleteComponentRelationshipBadRequestCode int = 400
+
+/*DeleteComponentRelationshipBadRequest Invalid cell id, component id or entity id
+
+swagger:response deleteComponentRelationshipBadRequest
+*/
+type DeleteComponentRelationshipBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.APIResponse `json:"body,omitempty"`
+}
+
+// NewDeleteComponentRelationshipBadRequest creates DeleteComponentRelationshipBadRequest with default headers values
+func NewDeleteComponentRelationshipBadRequest() *DeleteComponentRelationshipBadRequest {
+	return &DeleteComponentRelationshipBadRequest{}
+}
+
+// WithPayload adds the payload to the delete component relationship bad request response
+func (o *DeleteComponentRelationshipBadRequest) WithPayload(payload models.APIResponse) *DeleteComponentRelationshipBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete component relationship bad request response
+func (o *DeleteComponentRelationshipBadRequest) SetPayload(payload models.APIResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteComponentRelationshipBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+// DeleteComponentRelationshipNotFoundCode is the HTTP code returned for type DeleteComponentRelationshipNotFound
+const DeleteComponentRelationshipNotFoundCode int = 404
+
+/*DeleteComponentRelationshipNotFound Entity does not exists
+
+swagger:response deleteComponentRelationshipNotFound
+*/
+type DeleteComponentRelationshipNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.APIResponse `json:"body,omitempty"`
+}
+
+// NewDeleteComponentRelationshipNotFound creates DeleteComponentRelationshipNotFound with default headers values
+func NewDeleteComponentRelationshipNotFound() *DeleteComponentRelationshipNotFound {
+	return &DeleteComponentRelationshipNotFound{}
+}
+
+// WithPayload adds the payload to the delete component relationship not found response
+func (o *DeleteComponentRelationshipNotFound) WithPayload(payload models.APIResponse) *DeleteComponentRelationshipNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete component relationship not found response
+func (o *DeleteComponentRelationshipNotFound) SetPayload(payload models.APIResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteComponentRelationshipNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+// DeleteComponentRelationshipInternalServerErrorCode is the HTTP code returned for type DeleteComponentRelationshipInternalServerError
+const DeleteComponentRelationshipInternalServerErrorCode int = 500
+
+/*DeleteComponentRelationshipInternalServerError Internal error
+
+swagger:response deleteComponentRelationshipInternalServerError
+*/
+type DeleteComponentRelationshipInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.APIResponse `json:"body,omitempty"`
+}
+
+// NewDeleteComponentRelationshipInternalServerError creates DeleteComponentRelationshipInternalServerError with default headers values
+func NewDeleteComponentRelationshipInternalServerError() *DeleteComponentRelationshipInternalServerError {
+	return &DeleteComponentRelationshipInternalServerError{}
+}
+
+// WithPayload adds the payload to the delete component relationship internal server error response
+func (o *DeleteComponentRelationshipInternalServerError) WithPayload(payload models.APIResponse) *DeleteComponentRelationshipInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete component relationship internal server error response
+func (o *DeleteComponentRelationshipInternalServerError) SetPayload(payload models.APIResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteComponentRelationshipInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
