# swagger/swagger.yml
@@ -989,6 +989,98 @@ paths:
           schema:
             $ref: "#definitions/ApiResponse"
 
+  /cell/{cell_id}/component/{component_id}/connect_to/{entity_id}:
+    delete:
+      tags:
+      - "component"
+      summary: "Deletes a relationship from component"
+      description: ""
+      operationId: "DeleteComponentRelationship"
+      security:
+        - APIKeyHeader: []
+      parameters:
+      - name: "cell_id"
+        in: "path"
+        description: "ID of cell that will be used"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "component_id"
+        in: "path"
+        description: "ID of component that will be used"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "entity_id"
+        in: "path"
+        description: "entity that will be deleted"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid cell id, component id or entity id"
+          schema:
+            $ref: "#definitions/ApiResponse"
+        404:
+          description: "Entity does not exists"
+          schema:
+            $ref: "#definitions/ApiResponse"
+        500:
+          description: "Internal error"
+          schema:
+            $ref: "#definitions/ApiResponse"
+    post:
+      tags:
+      - "component"
+      summary: "Add a new relationship to a component"
+      description: ""
+      operationId: "addComponentRelationship"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      security:
+        - APIKeyHeader: []
+      parameters:
+      - name: "cell_id"
+        in: "path"
+        description: "ID of cell that will be used"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "component_id"
+        in: "path"
+        description: "ID of component that will be used"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "entity_id"
+        in: "path"
+        description: "ID of entity that will be used"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        201:
+          description: "Created"
+          schema:
+            type: integer
+        404:
+          description: "Invalid input"
+          schema:
+            $ref: "#definitions/ApiResponse"
+        409:
+          description: "Already exists"
+          schema:
+            $ref: "#definitions/ApiResponse"
+        500:
+          description: "Internal error"
+          schema:
+            $ref: "#definitions/ApiResponse"
+
   /cell/{cell_id}/component/{component_id}/hostgroups:
     get:
       tags:
